--- a/Pizzaria_v2.2.1
+++ b/Pizzaria_v2.2.1
@@ -1,3 +1,7 @@
+pedido = dict ()
+ped = []
+pizza = []
+
 def cabecalho():
     print("*"*52)
     print("*"*16," Pizzaria Logica !","*"*16)
@@ -20,7 +24,7 @@ def menu_secundario():
     print('Digite 3 para voltar para o menu principal!')
 
 
-def pedido_mesa(n_mesa):
+def pedido_mesa(n_mesa):   
     pedido['n_mesa'] = mesa
     pedido['pizza_t'] = str(input("Insira o sabor da pizza: ")).upper()
     pedido['valor_u'] = float(input("Insira o valor da pizza: "))
@@ -32,7 +36,76 @@ def pedido_mesa(n_mesa):
     print('###############################################')
 
 
-def lista_pedido(a):
+def cardapio():  #função para criar o cardapio
+    print("**************************************************")
+    print("*****SABORES*******-*******INGREDIENTES***********")
+    print("**************************************************") 
+    print("1 - CALABRESA      - MOLHO DE TOMATE, MUSSARELA E CALABRESA")
+    print("2 - 4 QUEIJOS      - MOLHO DE TOMATE, MUSSARELA, MIGNON AO MOLHO 4 QUEIJOS E CATUPIRY")
+    print("3 - DO CHEFF       - MOLHO DE TOMATE, MUSSARELA, PALMITO, CHAMPIGNON E MOLHO BRANCO")
+    print("4 - TOSCANA        - MOLHO DE TOMATE, MUSSARELA, CALABRESA E OVOS")
+    print("5 - CHEDDAR ESP.   - MOLHO DE TOMATE, MUSSARELA, CHAMPINON, PALMITO E CHEDDAR")
+    print("6 - PORTUGUESA     - MOLHO DE TOMATE, PRESUNTO, MUSSARELA, OVOS, CEBOLA E AZEITONAS")
+    print("7 - ATUM           - MOLHO DE TOMATE, MUSSARELA, ATUM, CEBOLA E AZEITONAS")
+    print("8 - VEGETARIANA    - MOLHO DE TOMATE, ESCAROLA REFOGADA, PALMITO, MILHO, TOMATES, AZEITONAS E MUSSARELA")
+    print("9 - BOLONHESA      - MOLHO DE TOMATE, BOLONHESA, MOLHO PARMEGIANA, PARMESÃO E MUSSARELA")
+    print("10 -PALMITO        - MOLHO DE TOMATE, ESCAROLA REFOGADA, PALMITO, MILHO, TOMATES, AZEITONAS E MUSSARELA")
+    print("11 - PARMEGIANA    - MOLHO DE TOMATE, PRESUNTO, MOLHO PARMEGIANA, PARMESÃO E MUSSARELA")
+    print("12 - MUSSARELA     - MOLHO DE TOMATE E MUSSARELA (2 CAMADAS)")
+    print("13 - CARIOCA       - MOLHO DE TOMATE, MUSSARELA, PALMITO, MILHO E CATUPIRY ")
+    sabor=int(input())
+    if (sabor >= 1) and (sabor <= 13):
+        if sabor == 1:
+            pedido['pizza_t'] = str('CALABRESA')
+        elif sabor == 2:
+            pedido['pizza_t'] = str('4 QUEIJOS')
+        elif sabor == 3:
+            pedido['pizza_t'] = str('DO CHEFF')
+        elif sabor == 4:
+            pedido['pizza_t'] = str('TOSCANA')
+        elif sabor == 5:
+            pedido['pizza_t'] = str('CHEDDAR ESP.')
+        elif sabor == 6:
+            pedido['pizza_t'] = str('PORTUGUESA')
+        elif sabor == 7:
+            pedido['pizza_t'] = str('ATUM')
+        elif sabor == 8:
+            pedido['pizza_t'] = str('VEGETARIANA')
+        elif sabor == 9:
+            pedido['pizza_t'] = str('BOLONHESA')
+        elif sabor == 10:
+            pedido['pizza_t'] = str('PALMITO')
+        elif sabor == 11:
+            pedido['pizza_t'] = str('PARMEGIANA')
+        elif sabor == 12:
+            pedido['pizza_t'] = str('MUSSARELA')
+        elif sabor == 13:
+            pedido['pizza_t'] = str('CARIOCA')
+    else:
+        print("ERROR! Opção selecionada Invalida!")
+    
+
+def tamanho():   #função para selecionar o tamanho da pizza
+    print("|1-Pequena | 2-Media  | 3-Grande   |  4-Big  |")
+    print("| R$29,00  | R$33,00  |  R$36,00   | R$41,00 |")
+    tamanho = float(input())
+    if (tamanho>=1) and (tamanho<=4):
+        if tamanho == 1:
+            pedido['valor_u'] = float(29.90)
+        elif tamanho == 2:
+            pedido['valor_u'] = float(33.00)
+        elif tamanho == 3:
+            pedido['valor_u'] = float(36.00)
+        elif tamanho == 4:
+            pedido['valor_u'] = float(41.00)     
+    else:
+        print("ERROR! Opção selecionada Invalida!")
+    print("Qual a quantidade de pizzas :")
+    pedido['quant'] = float(input("Insira a quantidade de pizzas: "))
+    if pedido['quant']<>
+        
+
+def lista_pedido(a):  #função para lista os pedidos de uma mesa
     print("|  Mesa |    Pizzas     | Quant | Valor Unitario")
     total = 0
     for c in ped:
@@ -42,24 +115,7 @@ def lista_pedido(a):
     print(f'Valor Total========================={total}')
 
 
-def fazer_pagamento(p):
-    pag = int(input("Deseja fechar a mesa S/N: ")).upper()
-    if pag = "S":
-        print("Escolha uma forma de pagamento: ")
-        print("1 - DINHEIRO")
-        print("2 - CARTAO DE CREDITO")
-        print("3 - CARTAO DE  DEBITO")
-        print("4 - PIC PAY")
-        print("5 - MOEDA VIRTUAL")            
-        f_pag = int(input())
-        if f_pag == 1:
-            for p 
-
-
-
-pedido = dict ()
-ped = []
-pizza = []
+#programa princiapal
 while True:
     cabecalho()
     menu_principal()
